Change model json name to snake version
